# desarrollo_social_y_economico

./: HISTORICO_SECOP.ipynb  Informe Consultoria.docx  README con poetry.md  README.md  dataset_automation.ipynb  planteamiento_de_problema (3).docx  pyproject.toml
datos/: Actualizacion de Datos SECOP.ipynb  Descarga_de_records_secop.ipynb  secop_cambiados.parquet
modelo estrella/: Unir_y_filtrar_secop.ipynb
modelo_estrella_sqlite/: Proyect_SECOP.db
